# ai-brochure-generator

./: .gitignore  README.md  main.py  pyproject.toml
brochure/: __init__.py  generator.py  scraper.py
